tools/crates/vendor/toml_edit/tests/fixtures/invalid/bool/mixed-case.stderr
TOML parse error at line 1, column 27
  |
1 | mixed-case              = valid   = False
  |                           ^
invalid string
expected `"`, `'`
